fix: alignment of text in Confirm Modal

--- a/frontend/src/components/modals/ConfirmModal.css
+++ b/frontend/src/components/modals/ConfirmModal.css
@@ -1,11 +1,11 @@
 .cc-confirm-modal .modal-header {
-  padding: 12px 16px;
+  padding: 12px 10px 12px 0;
   align-items: flex-start;
   margin: 12px 28.8px 0px 28.8px;
 }
 
 .cc-confirm-modal .modal-body {
-  margin-left: 28.8px;
+  margin: 0 12.8px;
 }
 
 .cc-confirm-modal .modal-footer {
